style: styled the nav bar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="header">
       <a href="#" class="logo">Anthony Garcia</a>
-      <nav>
+      <nav class="navbar">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="portfolio.html">Portfolio</a>
