--- a/portfolio.html
+++ b/portfolio.html
@@ -6,5 +6,14 @@
     <title>Personal Website</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <a href="#" class="logo">Anthony Garcia</a>
+      <nav class="navbar">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+      </nav>
+    </header>
+  </body>
 </html>
