Content for Home

--- a/index.html
+++ b/index.html
@@ -15,5 +15,25 @@
         <a href="portfolio.html">Portfolio</a>
       </nav>
     </header>
+
+    <section class="indexSection1">
+      <img
+        class="tyler"
+        src="images/tyler.webp"
+        alt="Tyler The Creator"
+        width="300"
+        height="360"
+      />
+      <h1 class="indexHeader">Developer, Gamer, Judoka</h1>
+      <p class="indexText">
+        Interested in improving development processes for teams big and small,
+        and helping new developers find their way.
+      </p>
+      <p class="quote">
+        "Who's gonna carry the boats?"
+        <br />
+        - David Goggins
+      </p>
+    </section>
   </body>
 </html>
