--- a/about.html
+++ b/about.html
@@ -15,5 +15,34 @@
         <a href="portfolio.html">Portfolio</a>
       </nav>
     </header>
+
+    <footer class="footer">
+      <a href="https://www.facebook.com/"
+        ><img
+          class="facebook"
+          src="images/facebook.png"
+          alt="facebook"
+          width="45px"
+          height="45px"
+      /></a>
+
+      <a href="https://www.linkedin.com/"
+        ><img
+          class="linkedin"
+          src="images/linkedin.png"
+          alt="linkedin"
+          width="45px"
+          height="45px"
+      /></a>
+
+      <a href="https://twitter.com/"
+        ><img
+          class="twitter"
+          src="images/twitter.png"
+          alt="twitter"
+          width="45px"
+          height="45px"
+      /></a>
+    </footer>
   </body>
 </html>
