--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Personal Website</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <header class="header">
       <a href="#" class="logo">Anthony Garcia</a>
@@ -24,16 +25,48 @@
         width="300"
         height="360"
       />
+
       <h1 class="indexHeader">Developer, Gamer, Judoka</h1>
+
       <p class="indexText">
         Interested in improving development processes for teams big and small,
         and helping new developers find their way.
       </p>
+
       <p class="quote">
         "Who's gonna carry the boats?"
         <br />
         - David Goggins
       </p>
     </section>
+
+    <footer class="footer">
+      <a href="https://www.facebook.com/"
+        ><img
+          class="facebook"
+          src="images/facebook.png"
+          alt="facebook"
+          width="45px"
+          height="45px"
+      /></a>
+
+      <a href="https://www.linkedin.com/"
+        ><img
+          class="linkedin"
+          src="images/linkedin.png"
+          alt="linkedin"
+          width="45px"
+          height="45px"
+      /></a>
+
+      <a href="https://twitter.com/"
+        ><img
+          class="twitter"
+          src="images/twitter.png"
+          alt="twitter"
+          width="45px"
+          height="45px"
+      /></a>
+    </footer>
   </body>
 </html>
