Added content to about

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </nav>
     </header>
 
-    <section class="indexSection1">
+    <section class="indexSection">
       <img
         class="tyler"
         src="images/tyler.webp"
