--- a/about.html
+++ b/about.html
@@ -16,6 +16,116 @@
       </nav>
     </header>
 
+    <section class="aboutSection">
+      <h1 class="aboutHeader">
+        When I'm not helping teams be productive while maintaing a healthy
+        work-life balance, I'm doing the following things.
+      </h1>
+
+      <h2 class="gymHeader">Gym</h2>
+
+      <img
+        class="gymImg"
+        src="images/gym.png"
+        alt="Gym"
+        width="170"
+        height="128"
+      />
+
+      <p class="gymText">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt labore
+        voluptatem sapiente neque culpa a quidem ipsam nostrum consequatur,
+        tenetur porro dolor! Corporis, nulla! Cupiditate quod unde dolore?
+        Veritatis, facilis.
+      </p>
+      <p class="gymText">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione,
+        harum. Animi mollitia ipsa quidem. Est eveniet accusamus facilis!
+        Tempore unde veritatis assumenda eos voluptatem facere voluptate nulla
+        beatae at consequuntur?
+      </p>
+      <p class="gymText">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni,
+        distinctio deserunt tempore debitis sapiente ducimus ad natus suscipit
+        quis quas consequatur at deleniti temporibus incidunt numquam, harum
+        quasi aperiam aliquam.
+      </p>
+      <p class="gymText2">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt odio
+        eos, impedit rerum deserunt totam quasi dicta soluta rem veniam fugit ut
+        doloremque quibusdam inventore ullam tempore ad facilis qui?
+      </p>
+
+      <h2 class="judoHeader">Judo</h2>
+
+      <img
+        class="judoImg"
+        src="images/judo.avif"
+        alt="judo"
+        width="170"
+        height="128"
+      />
+
+      <p class="judoText">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt
+        temporibus vero voluptatum tempora corrupti vel possimus saepe, commodi
+        minus quaerat. Eos beatae eveniet esse aspernatur illo eius provident
+        saepe a!
+      </p>
+      <p class="judoText">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores enim
+        aliquid voluptatibus totam corrupti. Minima saepe sapiente hic! Quam
+        ipsa voluptatem ducimus? Nihil tempora eligendi cupiditate quas. Magni,
+        quidem cumque.
+      </p>
+      <p class="judoText">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit totam,
+        fugit minus tempora aliquid nulla perspiciatis incidunt aliquam sint
+        vitae cum esse, molestiae rerum accusamus vel, suscipit officia
+        voluptatibus quisquam.
+      </p>
+      <p class="judoText2">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
+        quia ipsa laboriosam hic labore ratione sequi porro, error qui dolor
+        perspiciatis placeat nam, corporis omnis incidunt dolore, vero modi
+        ipsum!
+      </p>
+
+      <h2 class="gameHeader">Gaming</h2>
+
+      <img
+        class="gameImg"
+        src="images/gaming.avif"
+        alt="gaming"
+        width="128"
+        height="128"
+      />
+
+      <p class="gameText">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti
+        voluptate deserunt saepe suscipit totam dicta, amet porro doloremque
+        maiores beatae tempora mollitia distinctio laborum natus ea repudiandae
+        magni consequatur ullam!
+      </p>
+      <p class="gameText">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum odio,
+        cupiditate enim doloremque ea porro iure, minima blanditiis fugit nobis
+        officia tempora illo, exercitationem doloribus ullam modi voluptas rerum
+        quas.
+      </p>
+      <p class="gameText">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
+        consequatur eum nisi culpa dolor magni itaque sed ratione placeat error
+        aut fugit cum, illum aliquid nostrum perferendis quibusdam neque magnam?
+      </p>
+      <p class="gameText2">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit iure,
+        incidunt quo vitae sit architecto repellat saepe earum sed. Nobis quis
+        repudiandae, deserunt tempore enim soluta asperiores accusamus vitae
+        quae?
+      </p>
+    </section>
+
     <footer class="footer">
       <a href="https://www.facebook.com/"
         ><img
