Added content to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,85 @@
       </nav>
     </header>
 
+    <section class="portSection">
+      <h2 class="portHeader">Things I've built, in no particular order</h2>
+
+      <section class="project1">
+        <h1 class="proHeader1">The First Project</h1>
+
+        <img
+          class="projectImg1"
+          src="images/coding1.jpg"
+          alt="project"
+          width="240px"
+          height="160px"
+        />
+
+        <p class="pro1Text1">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quidem
+          debitis culpa id, nisi non ullam aspernatur accusantium commodi
+          provident, odio molestiae vitae nobis, eum saepe laudantium illo
+          repellat eos.
+        </p>
+        <p class="pro1Text2">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. At atque
+          eius ratione illo debitis explicabo maiores aut quia aliquam delectus.
+          Totam amet minima ipsa doloremque dignissimos necessitatibus obcaecati
+          maxime soluta?
+        </p>
+      </section>
+
+      <section class="project2">
+        <h1 class="proHeader2">The Second Project</h1>
+
+        <img
+          class="projectImg2"
+          src="images/coding2.jpg"
+          alt="project"
+          width="240px"
+          height="160px"
+        />
+
+        <p class="pro2Text1">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quidem
+          debitis culpa id, nisi non ullam aspernatur accusantium commodi
+          provident, odio molestiae vitae nobis, eum saepe laudantium illo
+          repellat eos.
+        </p>
+        <p class="pro2Text2">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. At atque
+          eius ratione illo debitis explicabo maiores aut quia aliquam delectus.
+          Totam amet minima ipsa doloremque dignissimos necessitatibus obcaecati
+          maxime soluta?
+        </p>
+      </section>
+
+      <section class="project3">
+        <h1 class="proHeader3">The Third Project</h1>
+
+        <img
+          class="projectImg3"
+          src="images/coding3.jpg"
+          alt="project"
+          width="240px"
+          height="160px"
+        />
+
+        <p class="pro3Text1">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quidem
+          debitis culpa id, nisi non ullam aspernatur accusantium commodi
+          provident, odio molestiae vitae nobis, eum saepe laudantium illo
+          repellat eos.
+        </p>
+        <p class="pro3Text2">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. At atque
+          eius ratione illo debitis explicabo maiores aut quia aliquam delectus.
+          Totam amet minima ipsa doloremque dignissimos necessitatibus obcaecati
+          maxime soluta?
+        </p>
+      </section>
+    </section>
+
     <footer class="footer">
       <a href="https://www.facebook.com/"
         ><img
