--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Website</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="javascript.js"></script>
   </head>
   <body>
     <header class="header">
@@ -37,10 +38,10 @@
           repellat eos.
         </p>
         <p class="pro1Text2">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. At atque
-          eius ratione illo debitis explicabo maiores aut quia aliquam delectus.
-          Totam amet minima ipsa doloremque dignissimos necessitatibus obcaecati
-          maxime soluta?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident nam
+          assumenda fugit ratione perspiciatis recusandae odit. Voluptates,
+          dignissimos atque itaque cum rem praesentium perspiciatis eveniet
+          suscipit, voluptate veniam nostrum vitae.
         </p>
       </section>
 
